@startuml
title Diagramme de classes complet - MediCare / application_medicale

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam roundcorner 8
skinparam class {
  BackgroundColor White
  BorderColor #0f2d4a
  ArrowColor #1e6fd9
}

hide methods

' =========================================================
' Authentification et comptes
' =========================================================
class User <<Auth>> {
  +id : INT <<PK>>
  +email : VARCHAR(191) <<UNIQUE>>
  +cin : VARCHAR(30) <<UNIQUE>>
  +password : VARCHAR(255)
  +role : ENUM(admin, pharmacist, doctor, supplier, pation, secretaire)
  +created_at : TIMESTAMP
}

class PasswordResetCode <<Security>> {
  +id : INT <<PK>>
  +user_id : INT <<FK>>
  +code_hash : VARCHAR(255)
  +expires_at : DATETIME
  +attempts : INT
  +used_at : DATETIME
  +request_ip : VARCHAR(45)
  +user_agent : VARCHAR(255)
  +created_at : TIMESTAMP
}

class Admin <<Admin>> {
  +id : INT <<PK>>
  +user_id : INT <<FK>>
  +full_name : VARCHAR(120)
  +email : VARCHAR(191) <<UNIQUE>>
  +phone : VARCHAR(30)
  +address : VARCHAR(255)
  +created_at : TIMESTAMP
}

class PatientPortalProfile <<Profil patient>> {
  +id : INT <<PK>>
  +user_id : INT <<FK>>
  +nom : VARCHAR(120)
  +prenom : VARCHAR(120)
  +email : VARCHAR(191) <<UNIQUE>>
  +telephone : VARCHAR(30)
  +cin : VARCHAR(30) <<UNIQUE>>
  +date_naissance : DATE
  +city : VARCHAR(120)
  +latitude : DECIMAL(10,7)
  +longitude : DECIMAL(10,7)
  +is_active : TINYINT
  +created_at : TIMESTAMP
  +updated_at : TIMESTAMP
}

' =========================================================
' Medecin, secretaire, patient
' =========================================================
class Doctor <<Medecin>> {
  +id : INT <<PK>>
  +user_id : INT <<FK>>
  +nom : VARCHAR(120)
  +prenom : VARCHAR(120)
  +email : VARCHAR(191) <<UNIQUE>>
  +cin : VARCHAR(30) <<UNIQUE>>
  +specialty : VARCHAR(120)
  +is_active : TINYINT
  +created_at : TIMESTAMP
}

class DoctorPublicProfile <<Profil public>> {
  +doctor_id : INT <<PK,FK>>
  +display_name : VARCHAR(160)
  +public_phone : VARCHAR(30)
  +address_line : VARCHAR(255)
  +city : VARCHAR(120)
  +latitude : DECIMAL(10,7)
  +longitude : DECIMAL(10,7)
  +consultation_fee : DECIMAL(10,2)
  +consultation_duration_min : INT
  +working_hours_json : TEXT
  +bio : TEXT
  +online_visibility : TINYINT
  +online_booking_enabled : TINYINT
  +updated_at : TIMESTAMP
}

class Secretary <<Secretaire>> {
  +id : INT <<PK>>
  +user_id : INT <<FK>>
  +doctor_id : INT <<FK>>
  +nom : VARCHAR(120)
  +prenom : VARCHAR(120)
  +email : VARCHAR(191) <<UNIQUE>>
  +telephone : VARCHAR(30)
  +is_active : TINYINT
  +created_at : TIMESTAMP
}

class Patient <<Patient global>> {
  +id : INT <<PK>>
  +nom : VARCHAR(120)
  +prenom : VARCHAR(120)
  +cin : VARCHAR(30) <<UNIQUE>>
  +telephone : VARCHAR(30)
  +date_naissance : DATE
  +created_at : TIMESTAMP
  +updated_at : TIMESTAMP
}

class DoctorPatient <<Dossier patient>> {
  +id : INT <<PK>>
  +doctor_id : INT <<FK>>
  +patient_global_id : INT <<FK>>
  +matricule : VARCHAR(30)
  +nom : VARCHAR(120)
  +prenom : VARCHAR(120)
  +cin : VARCHAR(30)
  +telephone : VARCHAR(30)
  +date_naissance : DATE
  +created_at : TIMESTAMP
  +updated_at : TIMESTAMP
}

class PatientFicheNote <<Fiche medicale>> {
  +id : INT <<PK>>
  +doctor_id : INT <<FK>>
  +patient_id : INT <<FK>>
  +entry_at : DATETIME
  +doctor_notes : TEXT
  +payment_amount : DECIMAL(10,2)
  +payment_doctor_comment : TEXT
  +created_at : TIMESTAMP
  +updated_at : TIMESTAMP
}

class Appointment <<Rendez-vous>> {
  +id : INT <<PK>>
  +doctor_id : INT <<FK>>
  +secretary_id : INT <<FK, nullable>>
  +patient_id : INT <<FK, nullable>>
  +portal_patient_id : INT <<FK, nullable>>
  +appointment_at : DATETIME
  +payment_amount : DECIMAL(10,2)
  +payment_doctor_comment : TEXT
  +doctor_notes : TEXT
  +created_by_role : ENUM(doctor, secretaire, pation)
  +created_at : TIMESTAMP
  +updated_at : TIMESTAMP
}

class WaitingRoomCounter <<Salle attente>> {
  +id : INT <<PK>>
  +doctor_id : INT <<FK>>
  +counter_date : DATE
  +waiting_count : INT
  +updated_at : TIMESTAMP
}

class Ordonnance <<Ordonnance>> {
  +id : INT <<PK>>
  +doctor_id : INT <<FK, nullable>>
  +doctor_patient_id : INT <<FK, nullable>>
  +cin : VARCHAR(30)
  +nom : VARCHAR(120)
  +prenom : VARCHAR(120)
  +ordonnance : TEXT
  +status : VARCHAR(50)
  +created_at : TIMESTAMP
}

' =========================================================
' Pharmacie, fournisseur, stock
' =========================================================
class Pharmacie <<Pharmacien>> {
  +id_pharmacie : INT <<PK>>
  +user_id : INT <<FK>>
  +nom_pharmacie : VARCHAR(120)
  +email : VARCHAR(191) <<UNIQUE>>
  +telephone : VARCHAR(30)
  +president_pharmacie : VARCHAR(120)
  +address_line : VARCHAR(255)
  +city : VARCHAR(120)
  +pharmacy_type : ENUM(day,night,both)
  +opening_hours_json : TEXT
  +latitude : DECIMAL(10,7)
  +longitude : DECIMAL(10,7)
  +is_active : TINYINT
  +created_at : TIMESTAMP
}

class MedicamentStock <<Stock medicament>> {
  +id : INT <<PK>>
  +id_pharmacie : INT <<FK>>
  +nom : VARCHAR(140)
  +quantite : INT
  +prix : DECIMAL(10,2)
  +seuil_alerte : INT
  +created_at : TIMESTAMP
  +updated_at : TIMESTAMP
}

class Supplier <<Fournisseur>> {
  +id : INT <<PK>>
  +user_id : INT <<FK>>
  +nom : VARCHAR(120)
  +prenom : VARCHAR(120)
  +email : VARCHAR(191) <<UNIQUE>>
  +telephone : VARCHAR(30)
  +is_active : TINYINT
  +created_at : TIMESTAMP
}

class SupplierPharmacie <<Association M:N>> {
  +supplier_id : INT <<PK,FK>>
  +pharmacie_id : INT <<PK,FK>>
  +created_at : TIMESTAMP
}

class SupplierPartnershipRequest <<Demande partenariat>> {
  +id : INT <<PK>>
  +pharmacie_id : INT <<FK>>
  +supplier_id : INT <<FK>>
  +message : TEXT
  +status : ENUM(en_attente, acceptee, refusee)
  +response_note : TEXT
  +created_at : TIMESTAMP
  +updated_at : TIMESTAMP
  +responded_at : DATETIME
}

class Demande <<Demande medicament>> {
  +id : INT <<PK>>
  +pharmacie_id : INT <<FK>>
  +supplier_id : INT <<FK>>
  +nom_medicament : VARCHAR(140)
  +quantite : INT
  +status : ENUM(en_attente, acceptee, recue, non_livree, refusee)
  +response_note : TEXT
  +date_acceptation : DATETIME
  +created_at : TIMESTAMP
  +updated_at : TIMESTAMP
}

class Notification <<Notification>> {
  +id : INT <<PK>>
  +nom_medicament : VARCHAR(140)
  +quantite : INT
  +pharmacien_id : INT <<FK>>
  +fournisseur_id : INT <<FK>>
  +message : TEXT
  +status : ENUM(en_attente, acceptee, refusee, recue)
  +demande_id : INT <<FK>>
  +created_at : TIMESTAMP
}

' =========================================================
' Module IA - non persiste en base de donnees
' =========================================================
class AiAnalysisService <<Service IA>> {
  +endpoint : String = /analyse
  +model_path : String
  +device : String
  +analyze_image(image_bytes) : AiAnalysisResult
}

class ChestXRayClassifier <<Modele IA>> {
  +architecture : String = DenseNet121
  +num_classes : INT = 14
  +weights_path : String
}

class GradCAM <<Explicabilite IA>> {
  +target_layer : String
  +activations : Tensor
  +gradients : Tensor
  +generate(image_tensor, class_idx) : Heatmap
}

class AiAnalysisRequest <<Requete IA>> {
  +image : UploadFile
  +content_type : image/jpeg
  +file_size : Number
}

class AiAnalysisResult <<Resultat IA>> {
  +predictions : Map<String, Float>
  +pathologies : List<PathologyPrediction>
  +gradcam_image : Base64Image
  +gradcam_target : String
  +rapport : TEXT
  +device : String
}

class PathologyPrediction <<Prediction>> {
  +name : String
  +probability : Float
}

' =========================================================
' Relations - authentification
' =========================================================
User "1" -- "0..*" PasswordResetCode : genere
User "1" -- "0..1" PatientPortalProfile : possede
PatientPortalProfile "1" -- "0..*" Appointment : reserve en ligne

User "1" *-- "0..1" Doctor : compte (user_id FK)
User "1" *-- "0..1" Secretary : compte (user_id FK)
User "1" *-- "0..1" Supplier : compte (user_id FK)
User "1" *-- "0..1" Pharmacie : compte (user_id FK)
User "1" *-- "0..1" Admin : compte (user_id FK)

' =========================================================
' Relations - medecin, patients et rendez-vous
' =========================================================
Doctor "1" -- "0..1" DoctorPublicProfile : publie
Doctor "1" -- "0..*" Secretary : gere
Doctor "1" -- "0..*" DoctorPatient : suit
DoctorPatient "0..*" --> "0..1" Patient : patient global
DoctorPatient "0..1" -- "0..*" Appointment : concerne
DoctorPatient "1" -- "0..*" PatientFicheNote : contient
Doctor "1" -- "0..*" Appointment : planifie
Secretary "0..1" -- "0..*" Appointment : cree
Doctor "1" -- "0..*" PatientFicheNote : renseigne
Doctor "1" -- "0..*" WaitingRoomCounter : gere
Doctor "0..1" -- "0..*" Ordonnance : redige

' =========================================================
' Relations - pharmacie, ordonnances et fournisseurs
' =========================================================
DoctorPatient "1" -- "0..*" Ordonnance : concerne
Pharmacie "1" ..> "0..*" Ordonnance : verifie
Pharmacie "1" -- "0..*" MedicamentStock : stocke
Pharmacie "1" -- "0..*" SupplierPharmacie : partenariat
Supplier "1" -- "0..*" SupplierPharmacie : partenariat
Pharmacie "1" -- "0..*" SupplierPartnershipRequest : envoie
Supplier "1" -- "0..*" SupplierPartnershipRequest : recoit
Pharmacie "1" -- "0..*" Demande : passe
Supplier "1" -- "0..*" Demande : traite
Pharmacie "1" -- "0..*" Notification : recoit
Supplier "1" -- "0..*" Notification : envoie
Demande "0..1" -- "0..*" Notification : declenche

' =========================================================
' Relations - aide au diagnostic IA
' =========================================================
Doctor "1" ..> "0..*" AiAnalysisRequest : utilise l'aide IA
AiAnalysisRequest "1" --> "1" AiAnalysisService : envoyer image JPG
AiAnalysisService "1" *-- "1" ChestXRayClassifier : charge
AiAnalysisService "1" *-- "1" GradCAM : genere carte thermique
AiAnalysisService "1" --> "1" AiAnalysisResult : retourne
AiAnalysisResult "1" *-- "14" PathologyPrediction : contient

note right of AiAnalysisService
  Module IA externe FastAPI.
  Les resultats ne sont pas stockes
  dans le schema SQL actuel.
end note

note bottom of User
  Chaque entite metier (Doctor, Secretary, Supplier,
  Pharmacie, Admin) possede un user_id FK (UNIQUE)
  qui reference users.id avec ON DELETE CASCADE.
  Le mot de passe est stocke UNIQUEMENT dans users.password.
  PatientPortalProfile est lie a User de la meme facon.
end note

@enduml
